Make it possible to delete pages with subpages

--- a/app/translations/ar/core.json
+++ b/app/translations/ar/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "Do you really want to change the status of this page to **invisible?**",
     "pages.toggle.error.error": "The status of the error page cannot be changed",
     "pages.delete.headline": "هل أنت متأكد من رغبتك في حذف هذه الصفحة؟",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "لا يمكن حذف الصفحة الرئيسة",
     "pages.delete.error.home.text": "قمت بمحاولة حذف الصفحة الرئيسة. لا يمكن إتمام ذلك بسبب ما سيعقبه من آثار غير مرغوبة.",
     "pages.delete.error.error.headline": "لا يمكن حذف صفحة الأخطاء",
     "pages.delete.error.error.text": "قمت بمحاولة حذف صفحة الأخطاء. لا يمكن إتمام ذلك بسبب ما سيعقبه من آثار غير مرغوبة.",
-    "pages.delete.error.children.headline": "لا يمكن حذف هذه الصفحة",
-    "pages.delete.error.children.text": "لا يمكن حذف هذه الصفحة لإحتوائها على صفحات فرعية.  لإتمام ذلك، عليك أن تحذف صفحاتها الفرعية أولاً..",
     "pages.delete.error.blocked.headline": "لا يمكن حذف هذه الصفحة",
     "pages.delete.error.blocked.text": "هذه الصفحة مقفلة ولا يمكن حذفها.",
     "pages.search.help": "ابحث عن الصفحات باستخدام الوصلة. تنقل بين نتائج البحث باستخدام مفاتيح الأسهم لأعلى وأسفل، واضغط مفتاح الإدخال للإنتقال للصفحة المحددة.",
@@ -172,6 +173,8 @@
     "files.replace.click": "…او اضغط للاستبدال",
     "files.replace.error.type": "الملف المرفوع يجب أن يكون من نفس النوع",
     "files.delete.headline": "هل أنت متأكد من رغبتك في حذف هذا الملف؟",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "لم يتم العثور على الصفحة",
     "files.error.missing.file": "لم يتم العثور على الملف",
     "users": "المستخدمون",
