--- a/app/translations/ca/core.json
+++ b/app/translations/ca/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "Estàs segur de canviar l'estat de la pàgina a **invisible**?",
     "pages.toggle.error.error": "L'estat de la pàgina d'error no es pot modificar",
     "pages.delete.headline": "Estàs segur d'eliminar aquesta pàgina?",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "La pàgina d'inici no es pot eliminar",
     "pages.delete.error.home.text": "Estàs intentant eliminar la pàgina d'inici. Això no és possible, i donaria lloc a efectes no desitjats.",
     "pages.delete.error.error.headline": "La pàgina d'error no es pot eliminar",
     "pages.delete.error.error.text": "Estàs intentant eliminar la pàgina d'error. Això no és possible, i donaria lloc a efectes no desitjats.",
-    "pages.delete.error.children.headline": "La pàgina no es pot eliminar",
-    "pages.delete.error.children.text": "Aquesta pàgina té subpàgines i no es pot eliminar. Per eliminar-la, cal eliminar primer totes les seves subpàgines.",
     "pages.delete.error.blocked.headline": "La pàgina no es pot eliminar",
     "pages.delete.error.blocked.text": "Aquesta pàgina esta bloquejada i no es pot eliminar.",
     "pages.search.help": "Cercar pàgines per URL. Navega a través dels resultats de la cerca amb les tecles de fletxa cap amunt i cap avall i prem enter per saltar a la pàgina seleccionada.",
@@ -172,6 +173,8 @@
     "files.replace.click": "… o clica per reeplaçar-lo",
     "files.replace.error.type": "L'arxiu carregat ha de ser del mateix tipus",
     "files.delete.headline": "Estàs segur d'eliminar aquest arxiu?",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "La pàgina no s'ha trobat",
     "files.error.missing.file": "L'arxiu no s'ha trobat",
     "users": "Usuaris",
