--- a/app/translations/cs/core.json
+++ b/app/translations/cs/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "Opravdu chcete změnit status této stránky na **neviditelný?**",
     "pages.toggle.error.error": "Status této error stránky nemůže být změněn",
     "pages.delete.headline": "Opravdu chcete smazat tuto stránku?",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "Úvodní stránka nemůže být smazána",
     "pages.delete.error.home.text": "Snažíte se smazat úvodní stránka webu. To není možné a způsobilo by to nechtěné problémy.",
     "pages.delete.error.error.headline": "Chybová stránka nemůže být smazána",
     "pages.delete.error.error.text": "Snažíte se smazat chybovou stránku. To není možné a způsobilo by to nechtěné problémy.",
-    "pages.delete.error.children.headline": "Stránka nemůže být smazána",
-    "pages.delete.error.children.text": "Tato stránka má podstránky a proto nemůže být smazána. Nejdříve prosím smažte všechny podstránky.",
     "pages.delete.error.blocked.headline": "TStránka nemůže být smazána",
     "pages.delete.error.blocked.text": "Tato stránka je zamčená a proto nemůže být smazána.",
     "pages.search.help": "Vyhledat stránku pomocí URL. Pro přechod mezi výsledky použijte šipky nahodu a dolů. Pomocí klávesy Enter pak stránku vyberte.",
@@ -172,6 +173,8 @@
     "files.replace.click": "…nebo klikněte pro nahrazení",
     "files.replace.error.type": "Nahraný soubor musí být stejného typu",
     "files.delete.headline": "Opravdu chcete smazat tento soubor?",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "Stránku se nepodařilo nalézt",
     "files.error.missing.file": "Soubor se nepodařilo nalézt",
     "users": "Uživatelé",
