--- a/app/translations/da/core.json
+++ b/app/translations/da/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "Ønsker du virkelig at ændre denne sides status til **usynlig?**",
     "pages.toggle.error.error": "Status for fejl-siden kan ikke ændres",
     "pages.delete.headline": "Ønsker du virkelig at slette denne side?",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "Forsiden kunne ikke slettes",
     "pages.delete.error.home.text": "Du forsøger at slette forsiden. Dette er ikke muligt da det ville lede til en uønsket oplevelse.",
     "pages.delete.error.error.headline": "Fejlsiden kan ikke slettes",
     "pages.delete.error.error.text": "Du forsøger at slette fejlsiden. Dette er ikke muligt da det ville lede til en uønsket oplevelse.",
-    "pages.delete.error.children.headline": "Siden kan ikke slettes",
-    "pages.delete.error.children.text": "Denne side har undersider og kan derfor ikke slettes. Slet venligst alle undersider først.",
     "pages.delete.error.blocked.headline": "Siden kan ikke slettes",
     "pages.delete.error.blocked.text": "Denne side er låst og kan derfor ikke slettes.",
     "pages.search.help": "Søg efter sider udfra URL. Naviger igennem søgeresultater med dine op- og ned-piletaster og tryk enter for at hoppe til den valgte side.",
@@ -172,6 +173,8 @@
     "files.replace.click": "…eller klik for at erstatte",
     "files.replace.error.type": "Den valgte fil skal være af samme filtype",
     "files.delete.headline": "Ønsker du virkelig at slette denne fil?",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "Siden kunne ikke findes",
     "files.error.missing.file": "Filen kunne ikke findes",
     "users": "Brugere",
