--- a/app/translations/fr/core.json
+++ b/app/translations/fr/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "Voulez-vous vraiment modifier le statut de cette page en **invisible**?",
     "pages.toggle.error.error": "Le statut de la page d'erreur ne peut pas être modifié",
     "pages.delete.headline": "Voulez-vous vraiment supprimer définitivement cette page ?",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "La page d’accueil ne peut être supprimée",
     "pages.delete.error.home.text": "Vous essayez de supprimer la page d’accueil. Ce n’est pas possible car cela entraînerait des effets indésirables.",
     "pages.delete.error.error.headline": "La page d’erreur ne peut être supprimée",
     "pages.delete.error.error.text": "Vous essayez de supprimer la page d’erreur. Ce n’est pas possible car cela aurait des effets indésirables.",
-    "pages.delete.error.children.headline": "La page ne peut être supprimée",
-    "pages.delete.error.children.text": "Cette page contient des pages secondaires. Veuillez supprimer les pages associées au préalable.",
     "pages.delete.error.blocked.headline": "La page ne peut être supprimée",
     "pages.delete.error.blocked.text": "Cette page est verrouillée et ne peut être supprimée.",
     "pages.search.help": "Rechercher des pages par URL. Naviguer entre les résultats avec les flèches « haut » et « bas » du clavier, puis appuyer sur la touche « Entrée » pour aller à la page sélectionnée.",
@@ -172,6 +173,8 @@
     "files.replace.click": "…ou cliquer pour le remplacer",
     "files.replace.error.type": "Le fichier transféré doit être du même type",
     "files.delete.headline": "Voulez-vous vraiment supprimer ce fichier ?",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "La page n’a pu être trouvée",
     "files.error.missing.file": "Le fichier n’a pu être trouvé",
     "users": "Utilisateurs",
