--- a/app/translations/ko/core.json
+++ b/app/translations/ko/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "페이지를 **비활성화**할까요?",
     "pages.toggle.error.error": "error 페이지의 상태는 변경할 수 없습니다.",
     "pages.delete.headline": "페이지를 삭제할까요?",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "home 페이지는 삭제할 수 없습니다.",
     "pages.delete.error.home.text": "home 페이지를 삭제하면 사이트에 심각한 문제가 생길 수 있습니다.",
     "pages.delete.error.error.headline": "error 페이지는 삭제할 수 없습니다.",
     "pages.delete.error.error.text": "error 페이지를 삭제하면 사이트에 심각한 문제가 생길 수 있습니다.",
-    "pages.delete.error.children.headline": "페이지를 삭제할 수 없습니다.",
-    "pages.delete.error.children.text": "페이지에 하위 페이지가 있습니다. 먼저 모든 하위 페이지를 삭제하세요.",
     "pages.delete.error.blocked.headline": "페이지를 삭제할 수 없습니다.",
     "pages.delete.error.blocked.text": "페이지가 잠겨 있습니다.",
     "pages.search.help": "식별자별로 페이지를 검색합니다. 결과물을 선택하면 해당 페이지로 이동합니다.",
@@ -172,6 +173,8 @@
     "files.replace.click": "…이곳을 클릭해 업로드할 수 있습니다.",
     "files.replace.error.type": "형식이 다른 파일로는 교체할 수 없습니다.",
     "files.delete.headline": "파일을 삭제할까요?",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "페이지가 없습니다.",
     "files.error.missing.file": "파일이 없습니다.",
     "users": "사용자",
