--- a/app/translations/nl/core.json
+++ b/app/translations/nl/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "Wil je de status wijzigen naar **onzichtbaar**?",
     "pages.toggle.error.error": "De status van de error-pagina kan niet gewijzigd worden",
     "pages.delete.headline": "Weet je zeker dat je deze pagina wil verwijderen?",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "De homepage kan niet worden verwijderd",
     "pages.delete.error.home.text": "Je probeert de homepage te verwijderen. Dit is niet mogelijk en zou kunnen leiden tot ongewenste resultaten.",
     "pages.delete.error.error.headline": "De fout-pagina kan niet worden verwijderd",
     "pages.delete.error.error.text": "Je probeert de fout-pagina te verwijderen. Dit is niet mogelijk en zou kunnen leiden tot ongewenste resultaten.",
-    "pages.delete.error.children.headline": "De pagina kan niet worden verwijderd",
-    "pages.delete.error.children.text": "Deze pagina heeft subpagina’s en kan niet worden verwijderd. Verwijder eerst de subpagina’s.",
     "pages.delete.error.blocked.headline": "De pagina kan niet worden verwijderd",
     "pages.delete.error.blocked.text": "Deze pagina is vergrendeld en kan niet worden verwijderd.",
     "pages.search.help": "Zoek door pagina’s op URL. Je kunt navigeren tussen de pagina’s met de pijltjestoetsen. Met enter ga je naar de geselecteerde pagina.",
@@ -172,6 +173,8 @@
     "files.replace.click": "... of klik hier om een bestand te uploaden",
     "files.replace.error.type": "Het geüploade bestand moet van hetzelfde type zijn",
     "files.delete.headline": "Wil je dit bestand verwijderen?",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "De pagina kan niet worden gevonden",
     "files.error.missing.file": "Het bestand kan niet worden gevonden",
     "users": "Gebruikers",
