--- a/app/translations/pl/core.json
+++ b/app/translations/pl/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "Czy na pewno chcesz zmienić status strony na **niewidzialna**",
     "pages.toggle.error.error": "Status dla strony błędu nie może zostać zmieniony",
     "pages.delete.headline": "Czy na pewno chcesz usunąć tę stronę?",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "Strona główna nie może zostać usunięta",
     "pages.delete.error.home.text": "Próbujesz skasować stronę główną. To nie jest możliwe i prowadziłoby do niepożądanych skutków.",
     "pages.delete.error.error.headline": "Strona błędu nie może zostać usunięta",
     "pages.delete.error.error.text": "Próbujesz skasować stronę błędu. To nie jest możliwe i prowadziłoby do niepożądanych skutków.",
-    "pages.delete.error.children.headline": "Ta strona nie może zostać usunięta",
-    "pages.delete.error.children.text": "Ta strona posiada podstrony i nie może zostać skasowana. Usuń najpierw wszystkie podstrony.",
     "pages.delete.error.blocked.headline": "Ta strona nie może zostać usunięta",
     "pages.delete.error.blocked.text": "Ta strona jest zablokowana i nie może zostać usunięta.",
     "pages.search.help": "Przeszukaj strony według URL. Nawiguj po wynikach wyszukiwania strzałkami góra/dół i naciśnij enter, by przejść do wybranej strony.",
@@ -172,6 +173,8 @@
     "files.replace.click": "…lub kliknij, aby zastąpić",
     "files.replace.error.type": "Przesłany plik musi być plikiem tego samego typu",
     "files.delete.headline": "Czy na pewno chcesz usunąć ten plik?",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "Strona nie została odnaleziona",
     "files.error.missing.file": "Plik nie został odnaleziony",
     "users": "Użytkownicy",
