--- a/app/translations/pt_BR/core.json
+++ b/app/translations/pt_BR/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "Quer mesmo mudar o status desta página para **invisível?**",
     "pages.toggle.error.error": "O status da página de erro não pode ser alterado",
     "pages.delete.headline": "Quer mesmo deletar esta página?",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "A página \"home\" não pode ser deletada",
     "pages.delete.error.home.text": "Você está tentando deletar a página \"home\". O que não é possível e podería causar efeitos indesejados.",
     "pages.delete.error.error.headline": "A página \"error\" não pode ser deletada",
     "pages.delete.error.error.text": "Você está tentando deletar a página \"error\". O que não é possível e podería causar efeitos indesejados.",
-    "pages.delete.error.children.headline": "A página não pode ser deletada",
-    "pages.delete.error.children.text": "Esta página contém subpáginas e não pode ser deletada. Favor deletar todas subpáginas antes.",
     "pages.delete.error.blocked.headline": "A página não pode ser deletada",
     "pages.delete.error.blocked.text": "A página está bloqueada e não pode ser deletada.",
     "pages.search.help": "Procurar páginas por URL. Navegue pelos resultados usando as teclas \"acima\" e \"abaixo\" e pressione \"enter\" para saltar à página selecionada.",
@@ -172,6 +173,8 @@
     "files.replace.click": "…ou clique para substituir",
     "files.replace.error.type": "O arquivo subido deve ser do mesmo tipo",
     "files.delete.headline": "Quer mesmo deletar este arquivo?",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "Página não encontrada",
     "files.error.missing.file": "Arquivo não encontrado",
     "users": "Usuários",
