--- a/app/translations/pt_PT/core.json
+++ b/app/translations/pt_PT/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "Queres mesmo alterar o estatuto desta página para **invisível**?",
     "pages.toggle.error.error": "O estatuto da pagina erro não pode ser alterado",
     "pages.delete.headline": "Queres mesmo apagar esta página?",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "A página \"home\" não pode ser apagada",
     "pages.delete.error.home.text": "Estás a tentar apagar a página \"home\". O que não é possível e poderia causar efeitos indesejados.",
     "pages.delete.error.error.headline": "A página \"error\" não pode ser apagada",
     "pages.delete.error.error.text": "Estás a tentar apagar a página \"error\". O que não é possível e poderia causar efeitos indesejados.",
-    "pages.delete.error.children.headline": "A página não pode ser apagada",
-    "pages.delete.error.children.text": "Esta página contém subpáginas e não pode ser apagada. Por favor apaga todas as subpáginas antes.",
     "pages.delete.error.blocked.headline": "A página não pode ser apagada",
     "pages.delete.error.blocked.text": "A página está bloqueada e não pode ser apagada.",
     "pages.search.help": "Procurar páginas por URL. Navega pelos resultados usando as teclas \"cima\" e \"baixo\" e pressiona \"enter\" para saltar para a página selecionada.",
@@ -172,6 +173,8 @@
     "files.replace.click": "…ou clica para substituir",
     "files.replace.error.type": "O ficheiro que fizeste upload deve ser do mesmo tipo",
     "files.delete.headline": "Queres mesmo apagar este ficheiro?",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "Página não encontrada",
     "files.error.missing.file": "Ficheiro não encontrado",
     "users": "Utilizadores",
