--- a/app/translations/ro/core.json
+++ b/app/translations/ro/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "Sigur vrei sa faci **invizibilă** această pagină?",
     "pages.toggle.error.error": "The status of the error page cannot be changed",
     "pages.delete.headline": "Sigur vrei sa ştergi această pagină?",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "Pagina principală nu poate fi ştearsă!",
     "pages.delete.error.home.text": "Ai încercat să ştergi pagina principală a saitului. Acest lucru nu e posibil pentru că ar apărea efecte nedorite.",
     "pages.delete.error.error.headline": "Pagina de eroare nu poate fi ştearsă!",
     "pages.delete.error.error.text": "Ai încercat să ştergi pagina de eroare a saitului. Acest lucru nu e posibil pentru că ar apărea efecte nedorite.",
-    "pages.delete.error.children.headline": "Pagina nu poate fi ştearsă!",
-    "pages.delete.error.children.text": "Această pagină conţine subpagini şi nu poate fi ştearsă. Şterge te rog subpaginile mai întâi.",
     "pages.delete.error.blocked.headline": "Pagina nu poate fi ştearsă!",
     "pages.delete.error.blocked.text": "Această pagină este blocată şi nu poate fi ştearsă.",
     "pages.search.help": "Caută pagini în funcţie de URL. Navighează printre rezultatele afişate cu ajutorul săgeţilor de pe tastatură şi apasă <i>Enter</i> pentru a accesa pagina căutată.",
@@ -172,6 +173,8 @@
     "files.replace.click": "…sau click pentru a-l înlocui",
     "files.replace.error.type": "Fişierul încărcat trebuie să fie de acelaşi tip!",
     "files.delete.headline": "Sigur vrei să ştergi acest fişier?",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "Pagina nu a putut fi găsită!",
     "files.error.missing.file": "Fişierul nu a putut fi găsit!",
     "users": "Utilizatori",
