--- a/app/translations/sv_SE/core.json
+++ b/app/translations/sv_SE/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "Är du säker på att du vill ändra sidan status till **dold?**",
     "pages.toggle.error.error": "Statusen för felsidan kan inte ändras",
     "pages.delete.headline": "Vill du verkligen radera sidan?",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "Startsidan kan ej raderas",
     "pages.delete.error.home.text": "Du försöker radera startsidan. Det är inte möjligt och kan leda till oönskade resultat.",
     "pages.delete.error.error.headline": "Felsidan kan inte tas bort",
     "pages.delete.error.error.text": "Du försöker radera startsidan. Det är inte möjligt och kan leda till oönskade resultat.",
-    "pages.delete.error.children.headline": "Den här sidan kan ej raderas",
-    "pages.delete.error.children.text": "Den här sidan har undersidor och kan ej raderas. Vänlig radera alla undersidor först.",
     "pages.delete.error.blocked.headline": "Den här sidan kan ej raderas",
     "pages.delete.error.blocked.text": "Den här sidan är låst och kan ej raderas.",
     "pages.search.help": "Sök bland alla sidor via dess webbadress. Navigera upp och ner genom sökresultaten med piltangenterna och tryck enter-/retur-knapp för att redigera markerad sida.",
@@ -172,6 +173,8 @@
     "files.replace.click": "… eller klicka för att välja en ny fil",
     "files.replace.error.type": "Den uppladdade filen måste vara av samma filtyp",
     "files.delete.headline": "Vill du verkligen ta bort denna fil?",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "Sidan kan ej hittas",
     "files.error.missing.file": "Filen kan ej hittas",
     "users": "Användare",
