--- a/app/translations/tr/core.json
+++ b/app/translations/tr/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "Bu sayfanın durumunu **görünmez** olarak değiştirmek istediğinizden emin misiniz?",
     "pages.toggle.error.error": "Hata sayfasının durumu değiştirilemez",
     "pages.delete.headline": "Bu sayfayı silmek istediğinizden emin misiniz?",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "Anasayfa silinemez",
     "pages.delete.error.home.text": "Anasayfayı silmeyi deniyorsunuz. Fakat bu mümkün değil, çünkü istenilmeyen etkilere neden olur.",
     "pages.delete.error.error.headline": "Hata sayfası silinemedi",
     "pages.delete.error.error.text": "Hata sayfasını silmeyi deniyorsunuz. Fakat bu mümkün değil, çünkü istenilmeyen etkilere neden olur.",
-    "pages.delete.error.children.headline": "Bu sayfa silinemedi",
-    "pages.delete.error.children.text": "Bu sayfa alt sayfalara sahip olduğundan dolayı silinemdi. Lütfen önce bu sayfanın alt sayfalarını siliniz.",
     "pages.delete.error.blocked.headline": "Bu sayfa silinemedi",
     "pages.delete.error.blocked.text": "Bu sayfa kilitli ve silinemez",
     "pages.search.help": "Sayfaları web adres uzantılarına göre arayınız. Arama sonuçlarından istediğiniz sayfayı klavyenizin yukarı ve aşağı tuşları ile seçip enter tuşuna bastıktan sonra aradığınız sayfaya direk yönleneceksiniz",
@@ -172,6 +173,8 @@
     "files.replace.click": "…veya cihazındaki başka bir dosya ile değiştirmek için buraya tıkla",
     "files.replace.error.type": "Yüklenecek dosyalar aynı dosya formatında olmalı",
     "files.delete.headline": "Bu dosyayı silmek istediğinizden emin misiniz?",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "Sayfa bulunamadı",
     "files.error.missing.file": "Dosya bulunamadı",
     "users": "Kullanıcılar",
