--- a/app/translations/bg/core.json
+++ b/app/translations/bg/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "Наистина ли искате да смените статуса на тази страница на **Невидим?**",
     "pages.toggle.error.error": "Статуса на ERROR страницата не може да се променя",
     "pages.delete.headline": "Наистина ли искате да изтриете тази страница?",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "HOME страницата не може да се изтрива",
     "pages.delete.error.home.text": "Вие се опитвате да изтриете HOME страницата. Това не е възможно, защото би довело до нежелани резултати.",
     "pages.delete.error.error.headline": "ERROR страницата не може да се изтрива",
     "pages.delete.error.error.text": "Вие се опитвате да изтриете ERROR страницата. Това не е възможно, защото би довело до нежелани резултати.",
-    "pages.delete.error.children.headline": "Страницата не може да се изтрива",
-    "pages.delete.error.children.text": "Тази страница има под-страници и не може да се изтрие. Моля, изтрийте всички под-страници.",
     "pages.delete.error.blocked.headline": "Страницата не може да се изтрие",
     "pages.delete.error.blocked.text": "Тази страница е заключена и не може да се изтрие.",
     "pages.search.help": "Търсете страници по URL. Използвайте клавишите Нагоре и Надолу за да обходите резултатите от търсенето. Използвайте Enter за да отидете в избраната страница.",
@@ -172,6 +173,8 @@
     "files.replace.click": "...или кликнете за да замените",
     "files.replace.error.type": "Каченият файл трябва да има същия файлов тип",
     "files.delete.headline": "Наистина ли искате да изтриете този файл?",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "Страницата не може да бъде намерена",
     "files.error.missing.file": "Файлът не може да бъде намерен",
     "users": "Потребители",
