--- a/app/translations/de/core.json
+++ b/app/translations/de/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "Willst du den Status der Seite wirklich in **unsichtbar** umändern?",
     "pages.toggle.error.error": "Der Status der Fehlerseite kann nicht geändert werden",
     "pages.delete.headline": "Willst du diese Seite wirklich löschen?",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "Die Startseite kann nicht gelöscht werden",
     "pages.delete.error.home.text": "Du versuchst die Startseite zu löschen. Das ist nicht möglich und würde zu ungewollten Fehlern führen.",
     "pages.delete.error.error.headline": "Die Fehlerseite kann nicht gelöscht werden",
     "pages.delete.error.error.text": "Du versuchst die Fehlerseite zu löschen. Das ist nicht möglich und würde zu ungewollten Fehlern führen.",
-    "pages.delete.error.children.headline": "Die Seite kann nicht gelöscht werden",
-    "pages.delete.error.children.text": "Die Seite hat Unterseiten und kann daher nicht gelöscht werden. Bitte entferne zuerst alle Unterseiten.",
     "pages.delete.error.blocked.headline": "Die Seite kann nicht gelöscht werden",
     "pages.delete.error.blocked.text": "Die Seite ist blockiert und kann daher nicht gelöscht werden.",
     "pages.search.help": "Durchsuche alle Seiten nach URL-Pfad. Du kannst dich durch Ergebnisse mit den Pfeiltasten bewegen und per Enter zur ausgewählten Seite springen.",
@@ -172,6 +173,8 @@
     "files.replace.click": "…oder klicke, um die Datei zu ersetzen",
     "files.replace.error.type": "Die hochgeladene Datei muss den selben Dateityp haben",
     "files.delete.headline": "Willst du diese Datei wirklich löschen?",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "Die Seite konnte nicht gefunden werden",
     "files.error.missing.file": "Die Datei konnte nicht gefunden werden",
     "users": "Benutzer",
