--- a/app/translations/fi/core.json
+++ b/app/translations/fi/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "Do you really want to change the status of this page to **invisible?**",
     "pages.toggle.error.error": "The status of the error page cannot be changed",
     "pages.delete.headline": "Haluatko varmasti poistaa sivun?",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "Aloitussivua ei voi poistaa",
     "pages.delete.error.home.text": "Sivuston aloitussivun poistaminen ei ole mahdollista.",
     "pages.delete.error.error.headline": "Virhesivua ei voi poistaa",
     "pages.delete.error.error.text": "Virhesivun poistaminen ei ole mahdollista.",
-    "pages.delete.error.children.headline": "Sivua ei voida poistaa",
-    "pages.delete.error.children.text": "Tällä sivulla on alasivuja, jotka pitää poistaa ennen kuin itse sivu voidaan poistaa.",
     "pages.delete.error.blocked.headline": "Sivua ei voida poistaa",
     "pages.delete.error.blocked.text": "Tämä sivu on suojattu eikä sitä voida poistaa.",
     "pages.search.help": "Hae sivuja osoitteen perusteella. Voit selata hakutuloksia nuolinäppäimillä ylös tai alas, ja painamalla ENTER siirryt valitulle sivulle.",
@@ -172,6 +173,8 @@
     "files.replace.click": "…tai valitse uusi tiedosto",
     "files.replace.error.type": "Uuden ja korvattavan tiedoston tulee olla samaa tyyppiä",
     "files.delete.headline": "Haluatko varmasti poistaa tiedoston?",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "Sivua ei löytynyt",
     "files.error.missing.file": "Tiedostoa ei löytynyt",
     "users": "Käyttäjät",
