--- a/app/translations/hu/core.json
+++ b/app/translations/hu/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "Biztos megváltoztatod az oldal állapotát erre: **rejtett**?",
     "pages.toggle.error.error": "A hibaoldal állapota nem módosítható",
     "pages.delete.headline": "Biztos vagy benne, hogy törlöd az oldalt?",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "A főoldal nem törölhető",
     "pages.delete.error.home.text": "Te a főoldalt próbálod törölni. Ez nem lehetséges és beláthatatlan következményei lennének.",
     "pages.delete.error.error.headline": "A hiba oldal nem törölhető",
     "pages.delete.error.error.text": "Te a hiba oldalt próbálod törölni. Ez nem lehetséges és beláthatatlan következményei lennének.",
-    "pages.delete.error.children.headline": "Az oldal nem törölhető",
-    "pages.delete.error.children.text": "Az oldalnak vannak aloldalai és nem törölhető.Előbb töröld az összes aloldalt.",
     "pages.delete.error.blocked.headline": "Az oldal nem törölhető",
     "pages.delete.error.blocked.text": "Ez az oldal zárolt és nem törölhető.",
     "pages.search.help": "Keresés URL szerint.Navigálhatsz a fel és le nyilakkal és az enter-rel ugorhatsz a kiválasztott oldalhoz.",
@@ -172,6 +173,8 @@
     "files.replace.click": "…vagy kattints ide a cseréhez",
     "files.replace.error.type": "A feltöltött fájlnak azonos a típusa",
     "files.delete.headline": "Biztos törölni akarod ezt a fájlt?",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "Az oldal nem található",
     "files.error.missing.file": "A fájl nem található",
     "users": "Felhasználók",
