--- a/app/translations/it/core.json
+++ b/app/translations/it/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "Vuoi veramente cambiare lo status della pagina a **invisibile?**",
     "pages.toggle.error.error": "Lo status della pagina d'errore non può essere cambiato",
     "pages.delete.headline": "Sei sicuro di voler eliminare questa pagina?",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "La pagina home non può essere eliminata",
     "pages.delete.error.home.text": "Stai cercando di eliminare la pagina home. Quest'operazione non è possibile e potrebbe causare effetti indesiderati.",
     "pages.delete.error.error.headline": "La pagina di errore non può essere eliminata",
     "pages.delete.error.error.text": "Stai cercando di eliminare la pagina di errore. Quest'operazione non è possibile e potrebbe causare effetti indesiderati.",
-    "pages.delete.error.children.headline": "La pagina non può essere eliminata",
-    "pages.delete.error.children.text": "Questa pagina ha delle sottopagine e quindi non può essere eliminata. Elimina prima tutte le sottopagine.",
     "pages.delete.error.blocked.headline": "La pagina non può essere eliminata",
     "pages.delete.error.blocked.text": "Questa pagina è bloccata e non può essere eliminata.",
     "pages.search.help": "Cerca le pagine indicando l'URL. Naviga tra i risultati della ricerca con i tasti freccia e premi invio per visualizzare la pagina selezionata.",
@@ -172,6 +173,8 @@
     "files.replace.click": "…o clicca per caricarne uno",
     "files.replace.error.type": "Il file caricato deve avere lo stesso formato",
     "files.delete.headline": "Sei sicuro di voler eliminare questo file?",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "La pagina non è stata trovata",
     "files.error.missing.file": "Il file non è stato trovato",
     "users": "Utenti",
