--- a/app/translations/ja/core.json
+++ b/app/translations/ja/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "Do you really want to change the status of this page to **invisible?**",
     "pages.toggle.error.error": "The status of the error page cannot be changed",
     "pages.delete.headline": "このページを削除してもよろしいですか？",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "The home page cannot be deleted",
     "pages.delete.error.home.text": "You are trying to delete the home page. This is not possible and would lead to unwanted effects.",
     "pages.delete.error.error.headline": "The error page cannot be deleted",
     "pages.delete.error.error.text": "You are trying to delete the error page. This is not possible and would lead to unwanted effects.",
-    "pages.delete.error.children.headline": "The page cannot be deleted",
-    "pages.delete.error.children.text": "This page has subpages and cannot be deleted. Please delete all subpages first.",
     "pages.delete.error.blocked.headline": "The page cannot be deleted",
     "pages.delete.error.blocked.text": "This page is locked and cannot be deleted.",
     "pages.search.help": "Search pages by URL. Navigate through search results with your up and down arrow keys and hit enter to jump to the selected page.",
@@ -172,6 +173,8 @@
     "files.replace.click": "もしくは、クリックして置き換え",
     "files.replace.error.type": "元と同じ種類のファイルを選択してください",
     "files.delete.headline": "このファイルを削除してもよろしいですか？",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "ページが見つかりませんでした",
     "files.error.missing.file": "ファイルが見つかりませんでした",
     "users": "ユーザー",
