--- a/app/translations/ru/core.json
+++ b/app/translations/ru/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "Вы действительно хотите изменить статус этой страницы на **не отображается?**",
     "pages.toggle.error.error": "Статус страницы ошибки не может быть изменен",
     "pages.delete.headline": "Вы действительно хотите удалить эту страницу?",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "Индексная (домашняя) страница не может быть удалена",
     "pages.delete.error.home.text": "Вы пытаетесь удалить индексную (домашнюю) страницу. Это невозможно, так как может привести к непредсказуемым результатам.",
     "pages.delete.error.error.headline": "Страница ошибок (404) не может быть удалена",
     "pages.delete.error.error.text": "Вы пытаетесь удалить страницу ошибок (Error 404 Page). Это невозможно, так как может привести к непредсказуемым результатам.",
-    "pages.delete.error.children.headline": "Страница не может быть удалена",
-    "pages.delete.error.children.text": "Для этой страницы существуют подстраницы. Пожалуйста, удалите сначала подстраницы.",
     "pages.delete.error.blocked.headline": "Эта страница не может быть удалена",
     "pages.delete.error.blocked.text": "Эта страница заблокирована и не может быть удалена в настоящий момент.",
     "pages.search.help": "Поиск страниц по ссылкам. Для перемещения по результатам поиска используйте стрелки на клавиатуре ВВЕРХ и ВНИЗ. Для открытия страницы, нажмите ВВОД.",
@@ -172,6 +173,8 @@
     "files.replace.click": "…или кликните для выбора",
     "files.replace.error.type": "Закачиваемый файл должен иметь такое же расширение (тип)",
     "files.delete.headline": "Вы действительно хотите удалить файл?",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "Страница не найдена",
     "files.error.missing.file": "Файл не найден",
     "users": "Пользователи",
