--- a/app/translations/zh_TW/core.json
+++ b/app/translations/zh_TW/core.json
@@ -116,12 +116,13 @@
     "pages.toggle.hide": "你真的要改變頁面狀態為 **不可見** 嗎？",
     "pages.toggle.error.error": "無法變更頁面狀態",
     "pages.delete.headline": "確認刪除此頁面？",
+    "pages.delete.children.headline": "This page has subpages!",
+    "pages.delete.children.text": "Force delete all subpages",
+    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
     "pages.delete.error.home.headline": "不可刪除首頁",
     "pages.delete.error.home.text": "如果刪除首頁將導致不可預期的後果。",
     "pages.delete.error.error.headline": "不可刪除出錯頁面",
     "pages.delete.error.error.text": "如果刪除出錯頁面將無法重新引導訪客。",
-    "pages.delete.error.children.headline": "無法刪除頁面",
-    "pages.delete.error.children.text": "此頁面底下有其他子頁面，請先刪除所有子頁面。",
     "pages.delete.error.blocked.headline": "頁面不可被刪除",
     "pages.delete.error.blocked.text": "此為保護頁面",
     "pages.search.help": "透過頁面網址搜尋（可用上下鍵選擇並按 Enter 鍵進入）",
@@ -172,6 +173,8 @@
     "files.replace.click": "⋯或按此上傳",
     "files.replace.error.type": "必須上傳相同格式的檔案",
     "files.delete.headline": "確認刪除檔案？",
+    "files.delete.error.headline": "The file cannot be deleted",
+    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
     "files.error.missing.page": "找不到頁面",
     "files.error.missing.file": "找不到檔案",
     "users": "使用者",
