--- a/app/translations/en/core.json
+++ b/app/translations/en/core.json
@@ -182,6 +182,7 @@
     "users.index.add": "Add a new user",
     "users.index.edit": "Edit",
     "users.index.delete": "Delete",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "Username",
     "users.form.username.placeholder": "Your username",
     "users.form.username.help": "Allowed characters: lowercase a-z, 0-9 and dashes",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "New password",
     "users.form.password.new.confirm.label": "Confirm the new password",
     "users.form.password.new.help": "Leave blank to keep the current password",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "Language",
     "users.form.role.label": "Role",
     "users.form.options.headline": "Account options",
