--- a/app/translations/bg/core.json
+++ b/app/translations/bg/core.json
@@ -182,6 +182,7 @@
     "users.index.add": "Добавете нов потребител",
     "users.index.edit": "Редактирай",
     "users.index.delete": "Изтрий",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "Потребителско име",
     "users.form.username.placeholder": "Вашето потребителско име",
     "users.form.username.help": "Позволени символи: малки букви a-zq 0-9 и тирета",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "Нова парола",
     "users.form.password.new.confirm.label": "Потвърдете новата парола",
     "users.form.password.new.help": "Оставете празна за да запазите текущата парола",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "Език",
     "users.form.role.label": "Роля",
     "users.form.options.headline": "Опции на акаунта",
