--- a/app/translations/hu/core.json
+++ b/app/translations/hu/core.json
@@ -182,6 +182,7 @@
     "users.index.add": "Új felhasználó",
     "users.index.edit": "szerkeszt",
     "users.index.delete": "töröl",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "Felhasználónév",
     "users.form.username.placeholder": "Felhasználóneved",
     "users.form.username.help": "Engedélyezett karakterek: kisbetűs a-z, 0-9 és kötőjel",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "Új jelszó",
     "users.form.password.new.confirm.label": "Az új jelszó megerősítése",
     "users.form.password.new.help": "Hagyd üresen, ha a jelenlegi jelszót meg akarod tartani",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "Nyelv",
     "users.form.role.label": "Role",
     "users.form.options.headline": "Fiók beállítások",
