--- a/app/translations/id/core.json
+++ b/app/translations/id/core.json
@@ -182,6 +182,7 @@
     "users.index.add": "Tambah pengguna baru",
     "users.index.edit": "Sunting",
     "users.index.delete": "Hapus",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "Nama pengguna",
     "users.form.username.placeholder": "Nama pengguna anda",
     "users.form.username.help": "Karakter yang diperbolehkan: huruf kecil a-z, 0-9 dan strip",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "Kata sandi baru",
     "users.form.password.new.confirm.label": "Konfirmasi kata sandi yang baru",
     "users.form.password.new.help": "Biarkan kosong untuk menyimpan kata sandi yang sekarang",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "Bahasa",
     "users.form.role.label": "Peran",
     "users.form.options.headline": "Opsi akun",
