--- a/app/translations/sv_SE/core.json
+++ b/app/translations/sv_SE/core.json
@@ -48,18 +48,18 @@
     "dashboard.index.site.title": "Webbplatsens webbadress",
     "dashboard.index.account.title": "Ditt konto",
     "dashboard.index.account.edit": "Redigera",
-    "dashboard.index.metatags.title": "Webbplatsens metadata",
+    "dashboard.index.metatags.title": "Inställningar",
     "dashboard.index.metatags.edit": "Redigera",
     "dashboard.index.history.title": "Dina senaste uppdateringar",
     "dashboard.index.history.text": "Dina senast ändrade sidor kommer att listas här för att underlätta att hitta dem igen senare.",
     "dashboard.index.license.title": "Kirbylicens",
     "dashboard.index.license.text": "Det verkar som att du kör Kirby på en publik server utan giltig licens. \n\nVänligen, stöd Kirby genom att (link: {buy} text: köpa en licens nu).\n\nOm du redan har en licens, se till att lägga till den i din konfigurationsfil: (link: {docs} text: site/config/config.php)",
-    "metatags": "Webbplatsens metadata",
+    "metatags": "Inställningar",
     "metatags.info": "Information om Kirby",
     "metatags.license": "Kirbylicens",
     "metatags.version.toolkit": "Version av Toolkit",
     "metatags.version.kirby": "Version av Kirby",
-    "metatags.version.panel": "Version av Kirby Panel",
+    "metatags.version.panel": "Version av Panel",
     "metatags.back": "Tillbaka till kontrollpanelen",
     "metatags.files": "Webbplatsfiler",
     "site.delete.error": "Sidan kan inte raderas",
@@ -67,19 +67,19 @@
     "pages.show.preview": "Förhandsvisa sida",
     "pages.show.template": "Mall",
     "pages.show.changeurl": "Ändra webbadress",
-    "pages.show.invisible": "Dold i meny",
-    "pages.show.visible": "Synlig i meny",
+    "pages.show.invisible": "Status: dold",
+    "pages.show.visible": "Status: synlig",
     "pages.show.changes.text": "Du har ändringar som inte sparats!",
-    "pages.show.changes.button": "Skrota",
+    "pages.show.changes.button": "Kassera",
     "pages.show.delete": "Radera sida",
     "pages.show.subpages.title": "Sidor",
     "pages.show.subpages.edit": "Redigera",
     "pages.show.subpages.add": "Lägg till",
-    "pages.show.subpages.empty": "Den här sidan har inga undersidor.",
+    "pages.show.subpages.empty": "Den här sidan har inga undersidor",
     "pages.show.files.title": "Filer",
     "pages.show.files.edit": "Redigera",
     "pages.show.files.add": "Lägg till",
-    "pages.show.files.empty": "Den här sidan har inga filer.",
+    "pages.show.files.empty": "Den här sidan har inga filer",
     "pages.show.error.permissions.title": "Sidan är ej skrivbar",
     "pages.show.error.permissions.text": "Vänligen kontrollera skriv- och läsrättigheter för mappen /content samt dess underliggande filer och mappar.",
     "pages.show.error.permissions.retry": "Försök igen",
@@ -112,13 +112,13 @@
     "pages.template.error": "Mallen för denna sida kan inte ändras",
     "pages.toggle.position": "Position",
     "pages.toggle.invisible": "dold",
-    "pages.toggle.publish": "Är du säker på att du vill ändra sidan status till **synlig?**",
-    "pages.toggle.hide": "Är du säker på att du vill ändra sidan status till **dold?**",
+    "pages.toggle.publish": "Är du säker på att du vill ändra sidans status till **synlig?**",
+    "pages.toggle.hide": "Är du säker på att du vill ändra sidans status till **dold?**",
     "pages.toggle.error.error": "Statusen för felsidan kan inte ändras",
     "pages.delete.headline": "Vill du verkligen radera sidan?",
-    "pages.delete.children.headline": "This page has subpages!",
-    "pages.delete.children.text": "Force delete all subpages",
-    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
+    "pages.delete.children.headline": "Denna sida har undersidor!",
+    "pages.delete.children.text": "Radera alla undersidor",
+    "pages.delete.children.help": "Alla undersidor och dess innehåll kommer att tas bort, vilket inte kan ångras.",
     "pages.delete.error.home.headline": "Startsidan kan ej raderas",
     "pages.delete.error.home.text": "Du försöker radera startsidan. Det är inte möjligt och kan leda till oönskade resultat.",
     "pages.delete.error.error.headline": "Felsidan kan inte tas bort",
@@ -134,9 +134,9 @@
     "subpages.index.add": "Lägg till en ny sida",
     "subpages.index.add.first.text": "Den här sidan har inga undersidor än",
     "subpages.index.add.first.button": "Lägg till den första sidan",
-    "subpages.index.visible": "Synliga sidor i meny",
+    "subpages.index.visible": "Synliga sidor",
     "subpages.index.visible.help": "Dra dolda sidor hit för att sortera dem/göra dem synliga.",
-    "subpages.index.invisible": "Dolda sidor (visas ej i meny)",
+    "subpages.index.invisible": "Dolda sidor",
     "subpages.index.invisible.help": "Dra synliga sidor hit för att dölja dem.",
     "subpages.add.error": "Den här sidan kan inte ha undersidor",
     "subpages.add.error.more": "Den här sidan kan inte ha fler undersidor",
@@ -173,8 +173,8 @@
     "files.replace.click": "… eller klicka för att välja en ny fil",
     "files.replace.error.type": "Den uppladdade filen måste vara av samma filtyp",
     "files.delete.headline": "Vill du verkligen ta bort denna fil?",
-    "files.delete.error.headline": "The file cannot be deleted",
-    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
+    "files.delete.error.headline": "Filen kan inte raderas",
+    "files.delete.error.text": "Du försöker radera en fil, som inte kan raderas.",
     "files.error.missing.page": "Sidan kan ej hittas",
     "files.error.missing.file": "Filen kan ej hittas",
     "users": "Användare",
@@ -182,6 +182,7 @@
     "users.index.add": "Lägg till en ny användare",
     "users.index.edit": "Redigera",
     "users.index.delete": "Radera",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "Användarnamn",
     "users.form.username.placeholder": "Ditt användarnamn",
     "users.form.username.help": "Tillåtna tecken: gemener a-z, 0-9 och streck",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "Nytt lösenord",
     "users.form.password.new.confirm.label": "Bekräfta nytt lösenord",
     "users.form.password.new.help": "Lämna blankt för att behålla nuvarande lösenord",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "Språk",
     "users.form.role.label": "Roll",
     "users.form.options.headline": "Kontoinställningar",
@@ -210,7 +212,7 @@
     "users.form.error.update.rights": "Du får inte uppdatera den här användaren",
     "users.form.error.create": "Användaren kan ej skapas",
     "users.form.error.permissions.title": "Mappen är ej skrivbar",
-    "users.form.error.permissions.text": "Var vänlig och kontroller att mappen <strong>sites/accounts</strong> existerar och har skrivrättigheter.",
+    "users.form.error.permissions.text": "Var vänlig och kontrollera att mappen <strong>sites/accounts</strong> existerar och är skrivbar.",
     "users.delete.headline": "Vill du verkligen radera användaren?",
     "users.delete.error": "Användaren kan ej raderas",
     "users.delete.error.permission": "Du får inte radera användare",
@@ -219,7 +221,7 @@
     "users.avatar.drop": "Släpp en profilbild här…",
     "users.avatar.click": "…eller klicka för att ladda upp",
     "users.avatar.error.type": "Du kan bara ladda upp bilder i följande filformat: JPG, PNG och GIF",
-    "users.avatar.error.folder.headline": "avatar-mappen är inte skrivbar",
+    "users.avatar.error.folder.headline": "Mappen <strong>avatar</strong> är inte skrivbar",
     "users.avatar.error.folder.text": "Var vänlig och kontrollera att mappen <strong>/assets/avatars</strong> existerar och har skrivrättigheter för att kunna ladda upp profilbilder.",
     "users.avatar.error.permission": "Du får inte ändra avataren",
     "users.avatar.delete.error": "Profilbilden kan ej raderas",
