--- a/app/translations/ca/core.json
+++ b/app/translations/ca/core.json
@@ -116,9 +116,9 @@
     "pages.toggle.hide": "Estàs segur de canviar l'estat de la pàgina a **invisible**?",
     "pages.toggle.error.error": "L'estat de la pàgina d'error no es pot modificar",
     "pages.delete.headline": "Estàs segur d'eliminar aquesta pàgina?",
-    "pages.delete.children.headline": "This page has subpages!",
-    "pages.delete.children.text": "Force delete all subpages",
-    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
+    "pages.delete.children.headline": "Aquesta pàgina té subpàgines",
+    "pages.delete.children.text": "Forçar eliminar totes les subpàgines",
+    "pages.delete.children.help": "Aquesta acció eliminarà recursivament totes les subpàgines, pot ser molt perillós i no es podran recuperar. Estàs realment segur de fer-ho?",
     "pages.delete.error.home.headline": "La pàgina d'inici no es pot eliminar",
     "pages.delete.error.home.text": "Estàs intentant eliminar la pàgina d'inici. Això no és possible, i donaria lloc a efectes no desitjats.",
     "pages.delete.error.error.headline": "La pàgina d'error no es pot eliminar",
@@ -173,8 +173,8 @@
     "files.replace.click": "… o clica per reeplaçar-lo",
     "files.replace.error.type": "L'arxiu carregat ha de ser del mateix tipus",
     "files.delete.headline": "Estàs segur d'eliminar aquest arxiu?",
-    "files.delete.error.headline": "The file cannot be deleted",
-    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
+    "files.delete.error.headline": "L'arxiu no es pot eliminar",
+    "files.delete.error.text": "Estàs intentant eliminar un arxiu que no es pot eliminar.",
     "files.error.missing.page": "La pàgina no s'ha trobat",
     "files.error.missing.file": "L'arxiu no s'ha trobat",
     "users": "Usuaris",
@@ -182,6 +182,7 @@
     "users.index.add": "Afegir un nou usuari",
     "users.index.edit": "Editar",
     "users.index.delete": "Eliminar",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "Nom d'usuari",
     "users.form.username.placeholder": "Nom d'usuari",
     "users.form.username.help": "Caràcters permesos: minúscules a-z, 0-9 i guions regulars",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "Nova contrasenya",
     "users.form.password.new.confirm.label": "Confirmar la nova contrasenya",
     "users.form.password.new.help": "Deixa en blanc per mantenir la contrasenya actual",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "Idioma",
     "users.form.role.label": "Rol",
     "users.form.options.headline": "Opcions de la compta",
