--- a/app/translations/da/core.json
+++ b/app/translations/da/core.json
@@ -182,6 +182,7 @@
     "users.index.add": "Tilføj en ny bruger",
     "users.index.edit": "Rediger",
     "users.index.delete": "Slet",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "Brugernavn",
     "users.form.username.placeholder": "Dit brugernavn",
     "users.form.username.help": "Tilladte tegn: små bogstaver a-z, 0-9 og bindestreger",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "Ny adgangskode",
     "users.form.password.new.confirm.label": "Bekræft den nye adgangskode",
     "users.form.password.new.help": "Lad stå tomt for at beholde den nuværende adgangskode",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "Sprog",
     "users.form.role.label": "Rolle",
     "users.form.options.headline": "Konto instillinger",
