--- a/app/translations/de/core.json
+++ b/app/translations/de/core.json
@@ -116,9 +116,9 @@
     "pages.toggle.hide": "Willst du den Status der Seite wirklich in **unsichtbar** umändern?",
     "pages.toggle.error.error": "Der Status der Fehlerseite kann nicht geändert werden",
     "pages.delete.headline": "Willst du diese Seite wirklich löschen?",
-    "pages.delete.children.headline": "This page has subpages!",
-    "pages.delete.children.text": "Force delete all subpages",
-    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
+    "pages.delete.children.headline": "Diese Seite hat Unterseiten!",
+    "pages.delete.children.text": "Erzwinge Löschen der Unterseiten",
+    "pages.delete.children.help": "Hierbei werden rekursiv alle Unterseiten gelöscht. Dies ist sehr riskant und kann nicht rückgängig gemacht werden. Bitte stelle sicher, dass du das wirklich machen möchtest!",
     "pages.delete.error.home.headline": "Die Startseite kann nicht gelöscht werden",
     "pages.delete.error.home.text": "Du versuchst die Startseite zu löschen. Das ist nicht möglich und würde zu ungewollten Fehlern führen.",
     "pages.delete.error.error.headline": "Die Fehlerseite kann nicht gelöscht werden",
@@ -173,8 +173,8 @@
     "files.replace.click": "…oder klicke, um die Datei zu ersetzen",
     "files.replace.error.type": "Die hochgeladene Datei muss den selben Dateityp haben",
     "files.delete.headline": "Willst du diese Datei wirklich löschen?",
-    "files.delete.error.headline": "The file cannot be deleted",
-    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
+    "files.delete.error.headline": "Die Datei kann nicht gelöscht werden.",
+    "files.delete.error.text": "Du versuchst eine Datei zu löschen, die nicht gelöscht werden kann.",
     "files.error.missing.page": "Die Seite konnte nicht gefunden werden",
     "files.error.missing.file": "Die Datei konnte nicht gefunden werden",
     "users": "Benutzer",
@@ -182,6 +182,7 @@
     "users.index.add": "Neuen Benutzer anlegen",
     "users.index.edit": "Bearbeiten",
     "users.index.delete": "Löschen",
+    "users.index.passwordless": "Ohne Passwort",
     "users.form.username.label": "Benutzername",
     "users.form.username.placeholder": "Dein Benutzername",
     "users.form.username.help": "Format: Kleinbuchstaben a-z, 0-9 und Bindestriche",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "Neues Passwort",
     "users.form.password.new.confirm.label": "Neues Passwort bestätigen",
     "users.form.password.new.help": "Leer lassen, um das aktuelle Passwort zu behalten",
+    "users.form.password.none.info": "<strong>Warnung</strong>: Dieser Benutzer ist aktuell ohne Passwort und kann sich nicht über das Panel anmelden.",
     "users.form.language.label": "Sprache",
     "users.form.role.label": "Rolle",
     "users.form.options.headline": "Accounteinstellungen",
