--- a/app/translations/el/core.json
+++ b/app/translations/el/core.json
@@ -182,6 +182,7 @@
     "users.index.add": "Προσθήκη νέου χρήστη",
     "users.index.edit": "Επεξεργασία",
     "users.index.delete": "Διαγραφή",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "Όνομα Χρήστη",
     "users.form.username.placeholder": "Το Όνομα Χρήστη σας",
     "users.form.username.help": "Επιτρεπτοί χαρακτήρες: πεζά a-z, 0-9 και παύλες",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "Νέος Κωδικός Πρόσβασης",
     "users.form.password.new.confirm.label": "Επιβεβαιώστε τον νέο Κωδικό Πρόσβασης",
     "users.form.password.new.help": "Αφήστε το κενό για να κρατήσετε τον τρέχοντα Κωδικό Πρόσβασης",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "Γλώσσα",
     "users.form.role.label": "Ρόλος",
     "users.form.options.headline": "Επιλογές λογαριασμού",
