--- a/app/translations/es_419/core.json
+++ b/app/translations/es_419/core.json
@@ -182,6 +182,7 @@
     "users.index.add": "Agregar un nuevo usuario",
     "users.index.edit": "Editar",
     "users.index.delete": "Eliminar",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "Usuario",
     "users.form.username.placeholder": "Tu nombre de usuario",
     "users.form.username.help": "Caracteres permitidos: minúsculas a-z, 0-9 y guiones regulares",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "Nueva contraseña",
     "users.form.password.new.confirm.label": "Confirmar la nueva contraseña",
     "users.form.password.new.help": "Dejar en blanco para mantener la misma contraseña",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "Idioma",
     "users.form.role.label": "Rol",
     "users.form.options.headline": "Opciones de cuenta",
