--- a/app/translations/fa/core.json
+++ b/app/translations/fa/core.json
@@ -182,6 +182,7 @@
     "users.index.add": "افزودن کاربر جدید",
     "users.index.edit": "ویرایش",
     "users.index.delete": "حذف",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "نام کاربری",
     "users.form.username.placeholder": "نام کاربری شما",
     "users.form.username.help": "حروف مجاز: حروف کوچک a-z، اعداد 0-9 و خط تیره -",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "گذرواژه جدید",
     "users.form.password.new.confirm.label": "تکرار گذرواژه",
     "users.form.password.new.help": "برای حفظ گذرواژه فعلی فیلد را خالی رها کنید",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "زبان",
     "users.form.role.label": "نقش",
     "users.form.options.headline": "گزینه های حساب کاربری",
