--- a/app/translations/fi/core.json
+++ b/app/translations/fi/core.json
@@ -182,6 +182,7 @@
     "users.index.add": "Lisää uusi käyttäjä",
     "users.index.edit": "Muokkaa",
     "users.index.delete": "Poista",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "Käyttäjätunnus",
     "users.form.username.placeholder": "Tunnuksesi",
     "users.form.username.help": "Sallitut merkit: pienet kirjaimet a-z, 0-9 sekä väliviivat",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "Uusi salasana",
     "users.form.password.new.confirm.label": "Uusi salasana uudelleen",
     "users.form.password.new.help": "Jätä tyhjäksi jos et halua vaihtaa salasanaasi",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "Kieli",
     "users.form.role.label": "Käyttäjätaso",
     "users.form.options.headline": "Tilinhallinta",
