--- a/app/translations/it/core.json
+++ b/app/translations/it/core.json
@@ -182,6 +182,7 @@
     "users.index.add": "Aggiungi nuovo utente",
     "users.index.edit": "Modifica",
     "users.index.delete": "Elimina",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "Nome utente",
     "users.form.username.placeholder": "Il tuo nome utente",
     "users.form.username.help": "Caratteri consentiti: minuscole a-z, 0-9 e trattini",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "Nuova password",
     "users.form.password.new.confirm.label": "Conferma la nuova password",
     "users.form.password.new.help": "Lasciare vuoto per mantenere la password corrente",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "Lingua",
     "users.form.role.label": "Ruolo",
     "users.form.options.headline": "Opzioni account",
