--- a/app/translations/ja/core.json
+++ b/app/translations/ja/core.json
@@ -182,6 +182,7 @@
     "users.index.add": "新規ユーザー",
     "users.index.edit": "編集",
     "users.index.delete": "削除",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "ユーザーID",
     "users.form.username.placeholder": "Your username",
     "users.form.username.help": "使用可能な文字： 英数小文字 a-z, 0-9 と ハイフン ( - )",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "新しいパスワード",
     "users.form.password.new.confirm.label": "新しいパスワードを再入力",
     "users.form.password.new.help": "変更しない場合は入力しない",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "表示言語",
     "users.form.role.label": "権限",
     "users.form.options.headline": "アカウントオプション",
