--- a/app/translations/nb/core.json
+++ b/app/translations/nb/core.json
@@ -182,6 +182,7 @@
     "users.index.add": "Legg til en ny bruker",
     "users.index.edit": "Rediger",
     "users.index.delete": "Slett",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "Brukernavn",
     "users.form.username.placeholder": "Ditt brukernavn",
     "users.form.username.help": "Tillatte tegn: små bokstaver a-z, 0-9 og vanlige bindestreker",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "Nytt passord",
     "users.form.password.new.confirm.label": "Bekreft det nye passordet",
     "users.form.password.new.help": "La stå tomt for å beholde det gjeldende passord",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "Språk",
     "users.form.role.label": "Rolle",
     "users.form.options.headline": "Kontoalternativer",
