--- a/app/translations/nl/core.json
+++ b/app/translations/nl/core.json
@@ -116,9 +116,9 @@
     "pages.toggle.hide": "Wil je de status wijzigen naar **onzichtbaar**?",
     "pages.toggle.error.error": "De status van de error-pagina kan niet gewijzigd worden",
     "pages.delete.headline": "Weet je zeker dat je deze pagina wil verwijderen?",
-    "pages.delete.children.headline": "This page has subpages!",
-    "pages.delete.children.text": "Force delete all subpages",
-    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
+    "pages.delete.children.headline": "Deze pagina heeft subpagina's!",
+    "pages.delete.children.text": "Forceer het verwijderen van alle subpagina's",
+    "pages.delete.children.help": "Deze actie zorgt ervoor dat alle subpagina's op alle niveau's worden verwijderd. Dit kan gevaarlijk zijn en het kan niet ongedaan worden gemaakt. Weet je zeker dat je dit wilt doen?",
     "pages.delete.error.home.headline": "De homepage kan niet worden verwijderd",
     "pages.delete.error.home.text": "Je probeert de homepage te verwijderen. Dit is niet mogelijk en zou kunnen leiden tot ongewenste resultaten.",
     "pages.delete.error.error.headline": "De fout-pagina kan niet worden verwijderd",
@@ -173,8 +173,8 @@
     "files.replace.click": "... of klik hier om een bestand te uploaden",
     "files.replace.error.type": "Het geüploade bestand moet van hetzelfde type zijn",
     "files.delete.headline": "Wil je dit bestand verwijderen?",
-    "files.delete.error.headline": "The file cannot be deleted",
-    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
+    "files.delete.error.headline": "Dit bestand kan niet worden verwijderd",
+    "files.delete.error.text": "Je probeert een bestand te verwijderen dat niet kan worden verwijderd.",
     "files.error.missing.page": "De pagina kan niet worden gevonden",
     "files.error.missing.file": "Het bestand kan niet worden gevonden",
     "users": "Gebruikers",
@@ -182,6 +182,7 @@
     "users.index.add": "Nieuwe gebruiker toevoegen",
     "users.index.edit": "Wijzigen",
     "users.index.delete": "Verwijderen",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "Gebruikersnaam",
     "users.form.username.placeholder": "Jouw gebruikersnaam",
     "users.form.username.help": "Toegestaan: a-z (kleine letters), 0-9 en streepjes (-)",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "Nieuw wachtwoord",
     "users.form.password.new.confirm.label": "Bevestig het nieuwe wachtwoord",
     "users.form.password.new.help": "Laat leeg om je huidige wachtwoord te behouden",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "Taal",
     "users.form.role.label": "Rol",
     "users.form.options.headline": "Account-opties",
