--- a/app/translations/pt_BR/core.json
+++ b/app/translations/pt_BR/core.json
@@ -182,6 +182,7 @@
     "users.index.add": "Adicionar novo usuário",
     "users.index.edit": "Editar",
     "users.index.delete": "Deletar",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "Usuário",
     "users.form.username.placeholder": "Seu nome de usuário",
     "users.form.username.help": "Caracteres permitidos: a-z mininúsculas, 0-9 e hífens",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "Nova senha",
     "users.form.password.new.confirm.label": "Confirmar nova senha",
     "users.form.password.new.help": "Deixe em branco para manter a senha atual",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "Idioma",
     "users.form.role.label": "Papel",
     "users.form.options.headline": "Opções de conta",
