--- a/app/translations/pt_PT/core.json
+++ b/app/translations/pt_PT/core.json
@@ -182,6 +182,7 @@
     "users.index.add": "Adicionar novo utilizador",
     "users.index.edit": "Editar",
     "users.index.delete": "Apagar",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "Utilizador",
     "users.form.username.placeholder": "Nome do utilizador",
     "users.form.username.help": "Caracteres permitidos: a-z mininúsculas, 0-9 e hífens",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "Nova Palavra-passe",
     "users.form.password.new.confirm.label": "Confirma a nova Palavra-passe",
     "users.form.password.new.help": "Deixa em branco para manter a Palavra-passe atual",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "Idioma",
     "users.form.role.label": "Role",
     "users.form.options.headline": "Opções de conta",
