--- a/app/translations/ru/core.json
+++ b/app/translations/ru/core.json
@@ -182,6 +182,7 @@
     "users.index.add": "Добавить нового пользователя",
     "users.index.edit": "Настроить",
     "users.index.delete": "Удалить",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "Логин",
     "users.form.username.placeholder": "Ваш логин",
     "users.form.username.help": "Формат: нижние латинские буквы, цифры и дефисы",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "Новый пароль",
     "users.form.password.new.confirm.label": "Подтвердите новый пароль",
     "users.form.password.new.help": "Оставьте пустым, чтобы не менять пароль",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "Язык",
     "users.form.role.label": "Роль",
     "users.form.options.headline": "Опции аккаунта",
