--- a/app/translations/tr/core.json
+++ b/app/translations/tr/core.json
@@ -116,9 +116,9 @@
     "pages.toggle.hide": "Bu sayfanın durumunu **görünmez** olarak değiştirmek istediğinizden emin misiniz?",
     "pages.toggle.error.error": "Hata sayfasının durumu değiştirilemez",
     "pages.delete.headline": "Bu sayfayı silmek istediğinizden emin misiniz?",
-    "pages.delete.children.headline": "This page has subpages!",
-    "pages.delete.children.text": "Force delete all subpages",
-    "pages.delete.children.help": "This will recursively delete all subpages, which can be very dangerous and cannot be undone. Make sure you really want to do this!",
+    "pages.delete.children.headline": "Bu sayfanın alt sayfaları bulunmaktadır!",
+    "pages.delete.children.text": "Tüm alt sayfaları silmeye zorla",
+    "pages.delete.children.help": "Bu çok tehlikeli ve geri alınamayan bütün alt sayfaları silme işlemidir. Bunun gerçekten yapmak istediğinizden emin olun!",
     "pages.delete.error.home.headline": "Anasayfa silinemez",
     "pages.delete.error.home.text": "Anasayfayı silmeyi deniyorsunuz. Fakat bu mümkün değil, çünkü istenilmeyen etkilere neden olur.",
     "pages.delete.error.error.headline": "Hata sayfası silinemedi",
@@ -173,8 +173,8 @@
     "files.replace.click": "…veya cihazındaki başka bir dosya ile değiştirmek için buraya tıkla",
     "files.replace.error.type": "Yüklenecek dosyalar aynı dosya formatında olmalı",
     "files.delete.headline": "Bu dosyayı silmek istediğinizden emin misiniz?",
-    "files.delete.error.headline": "The file cannot be deleted",
-    "files.delete.error.text": "You are trying to delete a file, which cannot be deleted.",
+    "files.delete.error.headline": "Bu dosya silinemedi",
+    "files.delete.error.text": "Silinemeyen bir dosyayı silmeye çalışıyorsunuz.",
     "files.error.missing.page": "Sayfa bulunamadı",
     "files.error.missing.file": "Dosya bulunamadı",
     "users": "Kullanıcılar",
@@ -182,6 +182,7 @@
     "users.index.add": "Yeni bir kullanıcı ekle",
     "users.index.edit": "Düzenle",
     "users.index.delete": "Sil",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "Kullanıcı Adı",
     "users.form.username.placeholder": "Kullanıcı adı seç",
     "users.form.username.help": "İzin verilen karakterler: a-z küçük harfler, 0-9 ve normal kesik çizgiler",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "Yeni Şifre",
     "users.form.password.new.confirm.label": "Yeni şifre tekrarı",
     "users.form.password.new.help": "Mevcut şifreyi boş bırak",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "Dil",
     "users.form.role.label": "Rol",
     "users.form.options.headline": "Kullanıcı Ayarları",
