--- a/app/translations/zh_CN/core.json
+++ b/app/translations/zh_CN/core.json
@@ -182,6 +182,7 @@
     "users.index.add": "添加新用户",
     "users.index.edit": "编辑",
     "users.index.delete": "删除",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "用户名",
     "users.form.username.placeholder": "您的用户名",
     "users.form.username.help": "允许字符：小写字母[a-z]和连字符[-]",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "新密码",
     "users.form.password.new.confirm.label": "确认新密码",
     "users.form.password.new.help": "保留此处空白以保留当前密码",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "语言",
     "users.form.role.label": "角色",
     "users.form.options.headline": "账户选项",
