--- a/app/translations/zh_TW/core.json
+++ b/app/translations/zh_TW/core.json
@@ -182,6 +182,7 @@
     "users.index.add": "新增使用者",
     "users.index.edit": "編輯",
     "users.index.delete": "刪除",
+    "users.index.passwordless": "Passwordless",
     "users.form.username.label": "帳號",
     "users.form.username.placeholder": "帳號",
     "users.form.username.help": "可用字元：英文小寫 a-z、數字 0-9 以及分號「-」",
@@ -195,6 +196,7 @@
     "users.form.password.new.label": "更改密碼",
     "users.form.password.new.confirm.label": "再次確認密碼",
     "users.form.password.new.help": "若要更改密碼請填入新密碼",
+    "users.form.password.none.info": "<strong>Warning</strong>: This user is currently passwordless and can't login via the Panel.",
     "users.form.language.label": "慣用語言",
     "users.form.role.label": "權限",
     "users.form.options.headline": "使用者選項",
